<resources>
    <string name="app_name">Passwordia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valid_email_address">Please provide a valid email address.</string>
    <string name="we_couldn_t_find_this_account">We couldn\'t find this account.Please check the email address.</string>
    <string name="error_occurred_while_checking_email">Error occurred while checking email!</string>
    <string name="sign_in_successful">Sign in successful</string>
    <string name="invalid_user">Invalid user</string>
    <string name="wrong_master_password">Wrong Master Password.</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="error_occurred_e_mail_address">An error occurred while checking the e-mail address.</string>
    <string name="email_address_is_already_in_use">This email address is already in use.</string>
    <string name="i_pretend_not_to_see_this_password">I pretend not to see this password</string>
    <string name="i_open_my_eyes_a_little_go_ahead">I open my eyes a little go ahead</string>
    <string name="i_like_the_password">I like the password</string>
    <string name="i_fell_in_love_with_the_password">I fell in love with the password</string>
    <string name="should_not_be_empty">Should not be empty</string>
    <string name="data_do_not_confirm_each_other">Data do not confirm each other.</string>
    <string name="your_account_has_been_successfully_created">Your account has been successfully created</string>
    <string name="password_reset_email_sent">Password reset email sent.</string>
    <string name="there_is_no_user_record">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="no_user_found_with_this_email_address">No user found with this email address.</string>
    <string name="failed_to_send_password_reset_email">Failed to send password reset email.</string>
    <string name="please_select_an_entry_option">Please select an entry option</string>
    <string name="copy_password">COPY PASSWORD</string>
    <string name="length">Length:</string>
    <string name="_6">6</string>
    <string name="_40">40</string>
    <string name="digits_e_g_345">Digits (e.g. 345)</string>
    <string name="letters_e_g_aa">Letters (e.g. Aa)</string>
    <string name="symbols_amp"><![CDATA[Symbols (@$!#?&)]]></string>
    <string name="strong_or_weak">Passwordia</string>
    <string name="username">Username</string>
    <string name="alternate_username">Alternate username</string>
    <string name="password">Password</string>
    <string name="website">Website</string>
    <string name="notes">Notes</string>
    <string name="category">Category</string>
    <string name="item_name">Item Name</string>
    <string name="generate">Generate</string>
    <string name="could_not_open_website">Could not open website</string>
    <string name="username_copied">Username Copied!</string>
    <string name="email_copied">Email Copied!</string>
    <string name="login_data_deleted">Login data deleted</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_delete_this_login_data">Are you sure you want to delete this login data?</string>
    <string name="delete">Delete</string>
    <string name="copy_password_message">Copy Password!</string>
    <string name="account_name">Account Name</string>
    <string name="your_key">Your key</string>
    <string name="verify_with_manual_password">Verify with manual password</string>
    <string name="unlock_with_your_biometrics">Unlock with your biometrics</string>
    <string name="app_can_authenticate_using_biometrics">App can authenticate using biometrics.</string>
    <string name="biometric_features_are_currently_unavailable">Biometric features are currently unavailable.</string>
    <string name="you_do_not_have_a_login_or_an_authenticator_record_yet_please_add_from_the_button_below">You do not have a login or an authenticator record yet, please add from the button below.</string>
    <string name="please_select_your_entry">Please select your entry</string>
    <string name="manuel_entry">Manuel Entry</string>
    <string name="or">OR</string>
    <string name="biometric_entry">Biometric Entry</string>
    <string name="_continue">Continue</string>
    <string name="let_s_start_again_forgetting_what_happened_n_between_us">Let\'s start again, forgetting what happened \n between us.</string>
    <string name="enter_e_mail">Enter E-Mail</string>
    <string name="send">SEND</string>
    <string name="got_it_can_you_repeat_it_one_more_time">Got it.Can you repeat it one more time?</string>
    <string name="type_your_master_password_again">Type your Master Password again</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="did_i_mention_i_m_in_love_with_you">Did I mention I\'m in love with you?</string>
    <string name="i_need_to_make_sure_it_s_not_like_tripping">I need to make sure it\'s not like tripping.</string>
    <string name="enter_master_password">Enter Master Password</string>
    <string name="forgot_my_password">Forgot my password.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="let_s_start_dating_with_your_email">Let\'s start dating with your email</string>
    <string name="and_i_also_need_the_master_password_n_to_protect_you">...and I also need the master password \n to protect you</string>
    <string name="create_your_master_password">Create Your Master Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="if_you_haven_t_made_a_backup_your_data_may_be_lost">If you haven\'t made a backup, your data may be lost.</string>
    <string name="you_can_support_us">You can support us</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app_with_your_friends">Share app with your friends :)</string>
    <string name="share">Share</string>
    <string name="report_technical_issues_or_suggest_new_features">Report technical issues or suggest new features</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="help">Help</string>
    <string name="take_a_backup_just_in_case">Take a backup just in case</string>
    <string name="backup">Backup</string>
    <string name="security">Security</string>
    <string name="biometric_password">Biometric Password</string>
    <string name="settings">Settings</string>
    <string name="sign_out_title">Sign Out?</string>
    <string name="sign_out_confirmation_message">Are you getting out of the app?</string>
    <string name="enter_password">Enter Password</string>
    <string name="export_backup">Export Backup</string>
    <string name="import_backup">Import Backup</string>
    <string name="hide_tag">Hide Tag</string>
    <string name="enter_texts_to_hide">Enter Texts to Hide</string>
    <string name="enter_the_tags_to_hide_separated_by_commas">Enter the tags to hide, separated by commas:</string>
    <string name="e_g_private_important_confidential">e.g.: private, important, confidential</string>
    <string name="save">Save</string>
    <string name="hidden_tag">"Hidden Tags: "</string>
    <string name="label_all">All</string>
    <string name="no_data">You do not have a login or an authenticator record yet, please add from the button below.</string>
    <string name="remove_from_favorites">Remove From Favorite</string>
    <string name="add_to_favorites">Favorite</string>
</resources>