<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundDarkColor">

    <TextView
        android:id="@+id/tvDialogInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_tags_to_hide_separated_by_commas"
        android:paddingBottom="8dp"/>

    <EditText
        android:id="@+id/etHiddenTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_g_private_important_confidential"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/save"/>
</LinearLayout>