<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passTextLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/refresh"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passText"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/controlBar"
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/strengthOrWeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strong_or_weak"
            android:textSize="22sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/lengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/length"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"/>

    <RelativeLayout
        android:id="@+id/lengthBarLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/lengthText">

        <TextView
            android:id="@+id/minValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:gravity="left|center"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/lengthBar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:stepSize="1"
            android:textAlignment="center"
            android:value="16"
            android:valueFrom="6"
            android:valueTo="40"
            app:tickVisible="false" />

        <TextView
            android:id="@+id/maxValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_40"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/specialCode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/lengthBarLayout"
        app:layout_constraintStart_toStartOf="@+id/lengthBarLayout"
        app:layout_constraintTop_toBottomOf="@id/lengthBarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/digits_e_g_345"
                android:textAlignment="center"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:gravity="end" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/letters_e_g_aa"
                android:textAlignment="center"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/letters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:gravity="end" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/symbols_amp"
                android:textAlignment="center"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/symbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:gravity="end" />

        </RelativeLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>