<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="35dp"  android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateLoginData"
    android:background="@color/backgroundColor">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/usernameLayout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            style="@style/InputLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alternateUsernameLayout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/InputLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alternateUsername"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/alternate_username" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/passLayout"
            android:layout_width="320dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/alternateUsernameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/InputLayoutStyle"
                app:endIconDrawable="@drawable/eye_icon"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/passwordGenerator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textColor="@color/white"
                android:text="@string/generate"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/websiteLayout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/InputLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/website"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/website" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notesLayout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/InputLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/websiteLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/notes" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemNameLayout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/InputLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notesLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemName"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/item_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="45dp"
            android:layout_marginTop="10dp"
            android:text="Categories :"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/categoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="ADD A Category"
                android:textColor="@color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="45dp"
                android:layout_gravity="start"
                app:layout_constraintTop_toBottomOf="@id/categoryButton">
            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createLoginData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/progressBarColor"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/check_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>